--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
   <h1>Minesweeper</h1>
+  <h2 id="msgStat"></h2>
 
 	<section class="board">
 		<div class="sq" id="sq0"></div>
@@ -113,5 +114,7 @@
     <div class="sq" id="sq98"></div>
     <div class="sq" id="sq99"></div>
 	</section>
+
+  <button  type="reset" id="reset-button" >Play Again!</button> 
 </body>
 </html>
