implement right click for flag

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <h1>Minesweeper</h1>
   <h2 id="msgStat"></h2>
 
-	<section class="board">
+	<section class="board" oncontextmenu="return false">
 		<div class="sq" id="sq0"></div>
 		<div class="sq" id="sq1"></div>
 		<div class="sq" id="sq2"></div>
