implement flag count and message

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <h1>Minesweeper</h1>
-  <h2 id="msgStat"></h2>
+  <h2 id="flagStat"></h2>
 
 	<section class="board" oncontextmenu="return false">
 		<div class="sq" id="sq0"></div>
