--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./css/style.css">
+  <link id="favicon" rel="icon" href="./images/bombPic.png" type="image/png" sizes="32x32">
 	<script defer src="./js/app.js"></script>
   <title>Minesweeper</title>
 </head>
